Prevent code from wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -61,6 +61,7 @@ textarea {
   resize: none;
 
   font-family: var(--font-brand);
+  white-space: pre;
 }
 
 textarea:focus {
